force-app/main/default/objects/Error_Log__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Aura Component</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Scheduler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>