force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Component_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Method_Name__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>